--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -1,6 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<android.support.v7.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    style="@style/CardStyle">
 
-</LinearLayout>
+    <LinearLayout
+        style="@style/std_layout"
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/place_image_view"
+            style="@style/CardImageView"
+            android:contentDescription="place image"
+            android:background="@drawable/aero_gravity"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="8dp">
+
+            <TextView
+                android:id="@+id/place_name_text_view"
+                tools:text="Simulatore"
+                style="@style/place_name_text_view" />
+
+            <TextView
+                android:id="@+id/place_description_text_view"
+                tools:text="zona Rho Milano"
+                style="@style/place_description_text_view" />
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+</android.support.v7.widget.CardView>
