--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -8,6 +8,7 @@
 
     <LinearLayout
         style="@style/std_layout"
+        android:layout_marginTop="8dp"
         android:orientation="vertical">
 
         <ImageView
@@ -35,5 +36,9 @@
         </LinearLayout>
 
     </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
 </android.support.v7.widget.CardView>
