--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -1,44 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    style="@style/CardStyle">
+    android:orientation="vertical">
 
-    <LinearLayout
-        style="@style/std_layout"
-        android:layout_marginTop="8dp"
-        android:orientation="vertical">
-
-        <ImageView
-            android:id="@+id/place_image_view"
-            style="@style/CardImageView"
-            android:contentDescription="place image"
-            android:background="@drawable/aero_gravity"/>
+    <android.support.v7.widget.CardView style="@style/CardStyle">
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="8dp">
+            style="@style/std_layout"
+            android:layout_marginTop="8dp"
+            android:baselineAligned="false"
+            android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/place_name_text_view"
-                tools:text="Simulatore"
-                style="@style/place_name_text_view" />
+            <ImageView
+                android:id="@+id/place_image_view"
+                style="@style/CardImageView"
+                android:background="@drawable/aero_gravity"
+                android:contentDescription="place image" />
 
-            <TextView
-                android:id="@+id/place_description_text_view"
-                tools:text="zona Rho Milano"
-                style="@style/place_description_text_view" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:orientation="vertical"
+                android:padding="8dp"
+                android:layout_weight="1">
+
+                <TextView
+                    android:id="@+id/place_name_text_view"
+                    style="@style/place_name_text_view"
+                    tools:text="Simulatore" />
+
+                <TextView
+                    android:id="@+id/place_description_text_view"
+                    style="@style/place_description_text_view"
+                    tools:text="zona Rho Milano" />
+
+            </LinearLayout>
 
         </LinearLayout>
 
-    </LinearLayout>
+    </android.support.v7.widget.CardView>
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-
-</android.support.v7.widget.CardView>
+</LinearLayout>
