--- a/app/src/main/res/layout/place_list.xml
+++ b/app/src/main/res/layout/place_list.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ListView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/list"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:drawSelectorOnTop="true"/>
+    android:drawSelectorOnTop="true"
+    app:layout_scrollFlags="scroll|enterAlways"
+    android:paddingBottom="60dp"/>
