--- a/app/src/main/res/layout/place_list.xml
+++ b/app/src/main/res/layout/place_list.xml
@@ -6,5 +6,4 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:drawSelectorOnTop="true"
-    app:layout_scrollFlags="scroll|enterAlways"
-    android:paddingBottom="60dp"/>
+    app:layout_scrollFlags="scroll|enterAlways"/>
