--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    style="@style/std_layout"
-    android:layout_marginBottom="8dp">
+    style="@style/std_layout">
 
     <android.support.v7.widget.CardView
-        style="@style/CardStyle">
+        style="@style/CardStyle"
+        android:layout_marginBottom="8dp">
 
         <LinearLayout
             style="@style/std_layout"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="16dp"
             android:baselineAligned="false"
             android:orientation="vertical">
 
