--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -34,6 +34,7 @@
     <style name="CardStyle" parent="std_layout">
         <item name="cardCornerRadius">2dp</item>
         <item name="cardElevation">2dp</item>
+        <item name="android:layout_marginBottom">8dp</item>
     </style>
     <!--ImageCardStyle-->
     <style name="CardImageView">
