--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -7,7 +7,7 @@
 
         <LinearLayout
             style="@style/std_layout"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="@dimen/margin_top"
             android:baselineAligned="false"
             android:orientation="vertical">
 
@@ -15,12 +15,7 @@
                 android:id="@+id/place_image_view"
                 style="@style/CardImageView" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:orientation="vertical"
-                android:padding="8dp">
+            <LinearLayout style="@style/cardText">
 
                 <TextView
                     android:id="@+id/place_name_text_view"
