--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -32,9 +32,9 @@
 
     <!--CardStyle-->
     <style name="CardStyle" parent="std_layout">
-        <item name="cardCornerRadius">2dp</item>
-        <item name="cardElevation">2dp</item>
-        <item name="android:layout_marginBottom">8dp</item>
+        <item name="cardCornerRadius">@dimen/radius_elevation</item>
+        <item name="cardElevation">@dimen/radius_elevation</item>
+        <item name="android:layout_marginBottom">@dimen/margin_bottom</item>
     </style>
     <!--ImageCardStyle-->
     <style name="CardImageView">
@@ -47,7 +47,7 @@
     </style>
 
     <style name="place_name_text_view" parent="std_layout">
-        <item name="android:layout_marginBottom">8dp</item>
+        <item name="android:layout_marginBottom">@dimen/margin_bottom</item>
         <item name="android:maxLines">1</item>
         <item name="android:textAppearance">?android:textAppearanceMedium</item>
         <item name="android:textStyle">bold</item>
@@ -55,6 +55,33 @@
 
     <style name="place_description_text_view" parent="std_layout">
         <item name="android:maxLines">2</item>
+    </style>
+
+    <style name="style_recycler">
+        <item name="android:orientation">vertical</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:drawSelectorOnTop">true</item>
+    </style>
+
+    <style name="cardText">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">0dp</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:orientation">vertical</item>
+        <item name="android:padding">@dimen/margin_bottom</item>
+    </style>
+
+    <style name="style_tab">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">?attr/actionBarSize</item>
+        <item name="android:layout_gravity">bottom</item>
+    </style>
+
+    <style name="style_toolbar">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">?attr/actionBarSize</item>
+        <item name="android:background">?attr/colorPrimary</item>
     </style>
 
 </resources>
